style: Update CSS for responsive grid layout

--- a/assets/component-map.css
+++ b/assets/component-map.css
@@ -59,3 +59,17 @@ label.quantity__label.form__label {
     font-size: 18px;
     color: #121212;
 }
+
+#grid-container {
+    display: none;
+}
+
+@media (min-width: 1024px) {
+
+    /* Breakpoint lg de Tailwind */
+    #grid-container {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 0.5rem;
+    }
+}
