--- a/snippets/carousel.liquid
+++ b/snippets/carousel.liquid
@@ -59,7 +59,7 @@
   </div>
 
   <!-- Grille pour desktop -->
-  <div id="grid-container" class="hidden lg:grid grid-cols-2 gap-2">
+  <div id="grid-container">
     {% for image in product.images %}
       <img
         class="object-cover object-center w-full h-full border"
