--- a/sections/hero-banner.liquid
+++ b/sections/hero-banner.liquid
@@ -19,7 +19,7 @@
 
   <!-- Content Section -->
   <div class="hero-content relative z-10 text-center flex flex-col items-center justify-center h-full">
-    <h1 class="!text-white text-3xl lg:text-4xl uppercase !font-extrabold mb-4">
+    <h1 class="!text-white text-3xl lg:text-4xl uppercase !font-extrabold mb-4 [text-shadow:_1px_1px_2px_black]">
       {{ section.settings.main_heading }}
     </h1>
     {% if section.settings.subheading != blank %}
