feat: Update translations for color settings, country labels, and UI elements

--- a/snippets/colors-settings.liquid
+++ b/snippets/colors-settings.liquid
@@ -14,7 +14,7 @@
   <div id="color-settings-content" class="space-y-4 py-2 ">
     <!-- Ocean Color -->
     <div class="flex items-center justify-between py-2">
-      <label class="text-gray-800 min-w-[140px] mr-2">Ocean color</label>
+      <label class="text-gray-800 min-w-[140px] mr-2">{{ 'ocean_color' | t }}</label>
       <div class="flex items-center gap-3">
         <div class="relative h-12 w-12">
           <div
@@ -40,7 +40,7 @@
 
     <!-- Unfilled Countries -->
     <div class="flex items-center justify-between py-2">
-      <label class="text-gray-800 min-w-[140px] mr-2">Unfilled Countries</label>
+      <label class="text-gray-800 min-w-[140px] mr-2">{{ 'unfilled_countries' | t }}</label>
       <div class="flex items-center gap-3">
         <div class="relative h-12 w-12">
           <div
@@ -67,7 +67,7 @@
 
     <!-- Selected Countries -->
     <div class="flex items-center justify-between py-2">
-      <label class="text-gray-800 min-w-[140px] mr-2">Selected Countries</label>
+      <label class="text-gray-800 min-w-[140px] mr-2">{{ 'selected_countries' | t }}</label>
       <div class="flex items-center gap-3">
         <div class="relative h-12 w-12">
           <div
@@ -94,7 +94,7 @@
 
     <!-- Borders -->
     <div class="flex items-center justify-between py-2">
-      <label class="text-gray-800 min-w-[140px] mr-2">Borders</label>
+      <label class="text-gray-800 min-w-[140px] mr-2">{{ 'borders' | t }}</label>
       <div class="flex items-center gap-3">
         <div class="relative h-12 w-12">
           <div
