--- a/snippets/country-settings.liquid
+++ b/snippets/country-settings.liquid
@@ -12,7 +12,7 @@
       onclick="toggleDropdown('country-settings-content', 'countries-settings-icon', 'searchCountry')"
       class="text-lg font-bold cursor-pointer flex items-center justify-between py-2"
     >
-      {{ 'Countries' | t }}
+      {{ 'countries' | t }}
       <span id="countries-settings-icon" class="transform transition-transform duration-200">
         {%- render 'chevron-up' -%}
       </span>
@@ -34,7 +34,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
           </svg>
         </span>
-        <span class="text-lg text-gray-700 hover:text-red-600 lg:text-[12px]">Unselect All</span>
+        <span class="text-lg text-gray-700 hover:text-red-600 lg:text-[12px]">{{ 'unselect_all' | t }}</span>
       </div>
 
       <div id="searchCountryFilter" class="flex w-full items-center">
