--- a/snippets/colors-settings.liquid
+++ b/snippets/colors-settings.liquid
@@ -4,7 +4,7 @@
     class="text-lg font-semibold cursor-pointer flex items-center justify-between pb-4"
   >
     <span class="flex items-center gap-2">
-      {{ 'Colors' | t }}
+      {{ 'colors' | t }}
     </span>
     <span id="color-settings-icon" class="transform transition-transform duration-200">
       {% render 'chevron-up', class: 'w-5 h-5 text-gray-400' %}
