--- a/snippets/country-settings.liquid
+++ b/snippets/country-settings.liquid
@@ -55,7 +55,7 @@
         <input
           type="text"
           id="countryFilter"
-          placeholder="Search countries"
+          placeholder="{{ 'search_countries' | t }}"
           class="w-full rounded-lg border border-gray-300 p-2 text-lg lg:text-[12px]"
         >
       </div>
