--- a/snippets/map.liquid
+++ b/snippets/map.liquid
@@ -7,6 +7,7 @@
   class="h-full w-full object-cover lg:mb-2"
   id="worldMap"
 >
+  <defs id="pattern-defs"></defs>
   {% render 'map_1' %}
   {% render 'map_2' %}
   {% render 'map_3' %}
